studyAbroad/CSSfiler/home.css
/******** HEADER ********/

.homeHeader {
  position: relative;
}

.homeHeaderImg {
  background-image: url(ikoner/heroBild.jpeg);
  Background-position: center;
  Background-size: cover;

  position: relative;
  top: 20px;
  left: 29.2vw;
  height: 550px;
  width: 900px;
}

.homeHeaderLeft > h1 {
  font-size: 50px;
}

.homeHeaderLeft > p {
  margin-top: 5px;
  font-size: 14px;
}

.homeHeaderLeft > button {
  height: 35px;
  width: 175px;
  border-radius: 40px;
    
  border: 1px solid black;
  color: var(--fontDark);
    
  color: var(--fontBold);
  background-color: var(--backgroundColorLight);
  transition: 1s;

  font-size: 16px;
  box-shadow: 2px 2px 4px #353434;    
}

.homeHeaderLeft > :last-child{
  margin-left: 15px;
}

.homeHeaderLeft > button:hover {
  transition: 0.8s;
  background-color: var(--fontBold);
  color: var(--backgroundColorLight);

  box-shadow: 4px 4px 6px #353434; 
  cursor: pointer;
}

.homeHeaderLeft {
  position: relative;
  left: 60px;
  bottom: 400px;

  color: var(--fontDark);
}

/******** QUIZ ********/
.quizStartContainer {
  display: flex;
  flex-direction: row;
  margin-bottom: 200px;
  width: 100%;
  margin-top: -10px;
}

.quizStartRight{
  display: flex;
  flex-direction: column;
  margin-left: 30px;
}

.quizStartRight > div {
  text-align: center;
}

.quizStartRight > button{
  height: 100px;
  width: 350px;
  margin-top: 50px;
  border-radius: 40px;

  font-size: 40px;
  border: 1px solid black;
  background-color: var(--backgroundColorLight);
  color: var(--fontBold);
  box-shadow: 3px 3px 5px #353434; 
  transition-duration: 1s;
}

.quizStartRight > button:hover {
  cursor: pointer;
  background-color: var(--fontBold);
  color: var(--backgroundColorLight);

  font-size: 40px;
  box-shadow: 4px 4px 4px #353434;  
  transition-duration: 0.8s;
}

.quizStartRight > p {
  text-align: center;
  font-size: 14px;
  font-family: var(--bodyText);
  color: var(--fontDark);
}

.quizImg {
  height: 400px;
  width: 800px;
  background-image: url(ikoner/quizImage.jpeg);
  margin-left: -50px;
  Background-position: center;
  Background-size: cover;
}

.startquiz {
  height: 100%;
  width: 100%;
}


.quizTitle {
  font-family: var(--heading);
  font-size: 40px;
  font-weight: bold;
  color: var(--fontBold);
}

.quiz-container {
  font-family: var(--heading);
  text-shadow: 1px 1px white;
  text-shadow: 0 1px #00000010;
  margin: 20px;
  display: flex;
  height: 400px;
  /* overflow: scroll; */
  overflow: hidden;
  z-index: 100;
  margin-top: -200px;
}

.quiz-inner {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
}

.question {
  margin: 1rem 0;
  font-size: 1.5rem;
  font-family: var(--subHeading);
  color:var(--fontDark);
  font-family: var(--subHeading);
}

.option {
  padding: 1rem;
  color: #fff;
  background: #AAC4D3;
  margin: 2px 0px;
  width: 80%;
  border-radius: 5px;
  transition: all 0.3s;
  display: inline-block;
}

.option:hover {
  background: #8ab6cf;
}

.option input:checked .option {
  background: #08038c;
  color: #000;
}



.controls > button {
  height: 40px;
  margin: 1rem 0rem;
  border-radius: 20px;
  width: 50px;

  padding: 0.5rem 1.5rem;
  border: 1px solid black;
  
  box-shadow: 1px 1px 3px #353434;
  border-radius: 50%;
  font-weight: 300;
  color: white;
  outline: none;
  transform: scale(0.98);
  transition: all 0.2s;

  Background-position: center;
  Background-size: cover;
}

button.previous {
  background-image: url(ikoner/arrow_back.png);
}

button.next {
  background-image: url(ikoner/arrow_forward.png);
}

button.restart {
  background: var(--fontBold);
  color: #00000050;
  font-size: 2rem;
  margin-bottom: 1rem;
  transition: all 0.4s;
}

button:hover{
  box-shadow: 2px 2px 4px #353434;
  cursor: pointer;
}

.result {
  display: flex;
  flex-direction: column;
  padding: 2rem;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 2.5rem;
}

.final-score {
  color: #00000099;
}

.summary {
  font-size: 1rem;
  text-shadow: 1px 1px #ffffff50;
  color: #00000099;
  background: rgba(255, 255, 255, 0.4);
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0 2rem;
  margin-bottom: 2rem;
}

.summary h1 {
  align-self: center;
}

.quizSummary {
  display: flex;
  flex-direction: row;
}

.quizSummary > div  {
  border: 3px solid skyblue;
  font-family: var(--subHeading);

  margin: 5px;
  height: 70px;
  width: 100px;

  contain: strict;
  display: flex;
  align-items: center;
  justify-content: center;
}

/******** KARUSELLEN ********/
.carousel {
  width: 100%
}

@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
.carousel-container {
  width: 85%;
  margin: 50px auto;
  min-height: 200px;
  position: relative;
}

.carousel-container .carousel-inner {
  overflow: hidden;
}

.carousel-container .track {
  display: inline-flex;
  transition: transform 0.5s;
}
.carousel-container .card-container {
  flex-shrink: 0;
  height: 250px;
  padding-right: 15px;
  box-sizing: border-box;
  width: 321.94px;
}

.card-container {
  width: 339.92px;
}

.carousel-container .card-container .card {
  height: 350px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.arrows .prev {
  left: -30px;
  display: none;
}

.arrows .prev.show {
  display: block;
}

.arrows .next {
  right: -30px;
}

.arrows .next.hide {
  display: none;
}

.card > * {
  flex: 1;
}

.card .img {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 30px;
}

.card .carouselInfo {
  flex-basis: 40px;
  color: var(--fontBold);
  flex-grow: 0;
  padding: 10px;
  box-sizing: border-box;
}

.carouselInfo {
  position: relative;
  bottom: 80px;
  left: 60px;
  width: 200px;
  height: 30px;
  background-color: var(--backgroundColorLight);
  display: flex;
  align-items: center;
  justify-content: center;

  font-family: var(--heading);
  font-size: 16px;
  transition-duration: 1s;
}

.carouselInfo:hover {
  cursor: pointer;
  color: var(--backgroundColorLight);
  background-color: var(--fontBold);
  transition-duration: 1s;
}

#arrowImg1{
  background-image: url(ikoner/arrow_back.png);
  height: 100%;
  width: 100%;
}

#arrowImg2{
  background-image: url(ikoner/arrow_forward.png);
  height: 100%;
  width: 100%;
}

.card > div {
  Background-position: center;
  Background-size: cover;
}

#arrowNext {
  position: absolute;
  right: -80px;
  top: 130px;
}

#arrowPrev {
  position: absolute;
  left: -90px;
  top: 130px;
}

#arrowImg {
  height: 30px;
  width: 30px;
}

#arrowPrev, #arrowNext {
  border: 2px solid black;

  border-radius: 50%;
  height: 50px;
  width: 50px;

  box-shadow: 3px 3px 5px #353434;
}

#arrowPrev:hover, #arrowNext:hover {
  cursor: pointer;
  box-shadow: 4px 4px 6px #353434;
}

#carouselHeading {
  color: #DC6420;

  font-size: 50px;
  font-family: var(--subHeading);
  text-align: center;
}

/******** INTERVJU ********/

.homeInterview {
  margin: 100px 0px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
}

.homeInterview > div {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.homeInterview .smallAd {
  width: 250px;
  height: 250px;
}

.smallIntw {
  background-position: center;
  background-size: cover;
  height: 175px;
  width: 175px;
  border-radius: 50%;

  box-sizing: border-box;
  transition: box-shadow 0.5s ease-in-out;
}

.smallIntw:hover {
  cursor: pointer;
  border: 2px solid var(--fontBold);
  box-shadow:  0px 0px 7px var(--shadow);
  box-sizing: border-box;

}

.intw1Small {
  background-image: url(ikoner/interviewPerson1_zoomed.jpg);
}

.intw2Small {
  background-image: url(ikoner/interviewPerson2_zoomed.jpg)
}

.intw3Small {
  background-image: url(ikoner/interviewPerson3_zoomed.jpg);
}

.intwContainer {
  color: var(--fontDark);
  font-family: var(--bodyText);
}

